Factorized code using streaming API