@@ -8,8 +8,6 @@ import com.application.fumetti.mappers.data.CurrencyData;
 import javax.transaction.Transactional;
 import javax.ws.rs.*;
 import javax.ws.rs.core.MediaType;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("/currencies")
 public class Currencies {
@@ -32,9 +30,8 @@ public class Currencies {
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     public Response<CurrencyData> getCurrencies() {
-        List<com.application.fumetti.db.Currencies> currencies = com.application.fumetti.db.Currencies.findAll().list();
-
-        var data = currencies.stream().map(CurrencyData::map).collect(Collectors.toList());
+        var data = com.application.fumetti.db.Currencies.findAll()
+                .stream().map(e -> CurrencyData.map((com.application.fumetti.db.Currencies) e)).toList();
         var resp = new Response<CurrencyData>(Operations.LOOKUP, Results.OK);
         resp.setData(data);
 
